--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
         <activity
             android:name=".ShareActivity"
             android:exported="true"
+            android:autoRemoveFromRecents="true"
             android:theme="@style/Theme.ShareOutsideTwitter">
 
             <intent-filter android:autoVerify="false">
